--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
+    <input id="todo_input" type="text" placeholder="name">
+    <button id="add_button" onclick="hinzufuegen()">Hinzufügen</button>
+    <ul id="todo_ul"></ul>
+   </form> 
+   <input id="zahl" type="button" value="Alert" onclick="zufall()"></input>
     <section>
         <h1 class="game--title">Tic Tac Toe</h1>
         <div class="game--container">
@@ -25,7 +30,9 @@
         <h2 class="game--status"></h2>
         <button class="game--restart">Restart Game</button>
     </section>
-    <img src="https://comps.gograph.com/lustig-mann-mit-wassermelone-helm-und-googles_gg82540731.jpg" alt="melonkopf" id="melone">
-<script src="script.js"></script>
+    <div class="melone">
+        <img src="https://comps.gograph.com/lustig-mann-mit-wassermelone-helm-und-googles_gg82540731.jpg" id="melone">
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
