--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
+    <div class="Spielerauswahl"><button onclick="bot()">1Spieler</button>
+        <button onclick="spieler()">2Spieler</button></div> 
     <div class="versteckt" id="alles">
     <div>
-        <h2>Spieler</h2> 
+        <h2>Spieler</h2>
         <input id="todo_input1" type="text" placeholder="Spieler1">
             <button id="add_button1" onclick="hinzufuegen(1)">ändern</button> <br>
-            <input id="todo_input2" type="text" placeholder="Spieler2">
-            <button id="add_button2" onclick="hinzufuegen(2)">ändern</button>
-            <input id="zahl" type="button" class="start" value="start spieler" onclick="zufall()"></input>
+            <div class="Spielerfeld"><input id="todo_input2" type="text" placeholder="Spieler2">
+                <button id="add_button2" onclick="hinzufuegen(2)">ändern</button>
+                <input id="zahl" type="button" class="start" value="start spieler" onclick="zufall()"></input></div>
         <div class="Box" id="currentPlayerBox"></div>
     </div>
     <!-- <div class="leseSpielfeld"><button onclick="leseSpielfeld()">klicken</button></div> -->
@@ -41,7 +43,6 @@
     </div>
     <script src="script.js"></script>
 </div>
-<div class="Spielerauswahl"><button onclick="bot()">1Spieler</button>
-    <button onclick="spieler()">2Spieler</button></div>
+<button id="schleife" onclick="forschleife()">forschleife</button>
 </body>
 </html>
