--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -37,12 +37,12 @@
         </div>
         <div><h2 class="game--status"></h2></div>
         <div><button class="game--restart">Restart Game</button></div>
+        <button class="schleife" id="schleife" onclick="forschleife()">com</button>
     </section>
     <div class="melone">
         <img src="https://comps.gograph.com/lustig-mann-mit-wassermelone-helm-und-googles_gg82540731.jpg" id="melone">
     </div>
     <script src="script.js"></script>
 </div>
-<button id="schleife" onclick="forschleife()">forschleife</button>
 </body>
 </html>
